# Slovark

./: .gitignore  LemmatizerDb.py  Program.cs  README.md  Scraper.cs  Slovark.sln  frequency_labeled_lemmas.csv  main.py  parse_wiki_table.py
file_reader/: .gitignore  Cargo.toml  ru_example_intermediary.txt
file_reader/data_ru/: section_snippets.txt  авуары.html
file_reader/src/: main.rs  process_xml.rs  traits.rs
file_reader/src/constants/: mod.rs
file_reader/src/models/: mod.rs  pos.rs  wiki_text_page.rs
file_reader/src/models/language/: mod.rs
file_reader/src/models/wiki_api_response/: mod.rs
file_reader/src/models/wiki_text_macro/: mod.rs
file_reader/src/models/wiki_text_macro/extract_lemma/: mod.rs  test.rs
file_reader/src/models/wiki_text_macro/extract_lemma/as_noun/: mod.rs
file_reader/src/models/wiki_text_macro/find_first/: mod.rs  test.rs
file_reader/src/models/wiki_text_macro/find_many/: mod.rs
file_reader/src/models/wiki_text_page/: mod.rs
file_reader/src/models/wiki_text_page/error/: mod.rs
file_reader/src/models/wiki_text_page/extracting_form_lemma/: mod.rs  test.rs
file_reader/src/models/wiki_text_page/parse_from_page/: mod.rs
file_reader/src/models/wiki_text_page/parse_from_page/determine_pos/: mod.rs
file_reader/src/models/wiki_text_page/reqwest_info/: mod.rs
file_reader/src/processes/: _1_dump_to_intermediary.rs  _2a_intermediary_to_lemmas_a.rs  _2b_intermediary_to_wikipages.rs  _3_wikipage_to_database.rs  mod.rs  utils.rs
file_reader/src/traits/: mod.rs
file_reader/src/traits/searchable/: mod.rs  test.rs
(+16 files in other folders)
