[package]
name = "file_reader"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "macros", "sqlite"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
bincode = "1.3.3"
reqwest = "0.12.5"

rubit_api_db = { path = "C:/Users/Noah3/Code/rubit_api/db", package = "db" }
